Fix comments white space

--- a/less/custom.less
+++ b/less/custom.less
@@ -601,3 +601,7 @@ aside.book {
 .highlight pre code .token.string {
     white-space: pre;
 }
+
+.highlight pre code .token.comment {
+    white-space: pre;
+}
